# Synthesizer

./: .gitignore  local.properties
app/: build.gradle
app/src/androidTest/java/kurufasulye/synthesizer/: ApplicationTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  OpenSLPlayerNative.cpp  OpenSLPlayerNative.h
app/src/main/java/kurufasulye/synthesizer/: AndroidPlayer.java  MainActivity.java  OpenSLPlayer.java  PlaybackThread.java  Player.java
app/src/main/jni/: OpenSLPlayerNative.cpp  OpenSLPlayerNative.h  openslplayerjni.c  openslplayerjni.cpp
app/src/main/res/layout/: activity_main.xml
app/src/test/java/kurufasulye/synthesizer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
